--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.0.1",
     "liquidjs": "^10.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
